Last adjustments #release

--- a/src/main/resources/assets/vampirism/guide/lang/de_DE.lang
+++ b/src/main/resources/assets/vampirism/guide/lang/de_DE.lang
@@ -1,6 +1,7 @@
 #X-Generator: crowdin.com
 #General
 guide.vampirism.book.title=Vampirism Handbuch
+guide.vampirism.welcomeMessage=Willkommen im Vampirism Guide. Werfe einen Blick herum, um herauszufinden, was du in dieser Mod tun kannst. Viel Spass.
 guide.vamprism.book.name=Vampirism Handbuch
 
 #Getting Started
@@ -14,7 +15,6 @@ guide.vampirism.gettingStarted.asAVampire.title=Als Vampir
 #Items and Blocks
 guide.vampirism.itemsAndBlocks.category=Gegenstände und Blöcke
 guide.vampirism.itemsAndBlocks.found.title=In der Welt gefunden
-guide.vampirism.itemsAndBlocks.found.pureBlood=Wird von Vampir-Lords in verschiedenen Reinheitsgrade abhängig von der Höhe des Lords hinterlassen. Erforderlich für die Rituale höherer Stufen.
 guide.vampirism.itemsAndBlocks.found.bloodAltar1=Dieser Block kann als Leuchtfeuer fungieren und gibt dir Geschwindigkeits- sowie Sättigungseffekte (du verbrauchst weniger Blut). Aber um diesen Effekt zu aktivieren, musst du dir ein "Blutsauger" herstellen und ihn durch Töten von Tieren füllen. Ist es gefüllt, kannst du es in den Altar einführen und der Effekt wird aktiviert, verbraucht aber langsam das gesammelte Blut. Dieser Block kann nicht hergestellt werden sondern nur in Sümpfen gefunden werden.
 guide.vampirism.itemsAndBlocks.found.vampireFlower=Vampir Orchideen können im Vampir Biom gefunden werden.
 
@@ -24,7 +24,7 @@ guide.vampirism.itemsAndBlocks.found.vampireFlower=Vampir Orchideen können im V
 
 #VampirePlayer
 
-
+#VampireLord
 
 
 
